# plate_detec

./: .gitignore  README.md  armor_debug.sh  view_debug.sh
src/armor/armor_detector/: CMakeLists.txt  package.xml
src/armor/armor_detector/include/armor_detector/: armor.h  detector.h  detector_node.h  number_classifier.h
src/armor/armor_detector/src/: detector.cpp  detector_node.cpp  detector_test_node.cpp  number_classifier.cpp
src/armor/armor_interfaces/: CMakeLists.txt  package.xml
src/armor/armor_interfaces/msg/: Armor.msg  TargetInfo.msg
src/armor/armor_tracker/: CMakeLists.txt  package.xml
src/armor/armor_tracker/include/armor_tracker/: EKF.hpp  coordsolver.h  general.h  kalman_filter.h  tracker.h  tracker_kalman.h  tracker_node.h
src/armor/armor_tracker/params/: coord_param.yaml
src/armor/armor_tracker/src/: coordsolver.cpp  general.cpp  kalman_filter.cpp  tracker.cpp  tracker_kalman.cpp  tracker_node.cpp
src/bringup/: package.xml
src/bringup/config/: camera_info.yaml  params.yaml  view.rviz
src/bringup/launch/: armor_launch.py  energy_launch.py  rm_launch.py  trt_armor_launch.py  view_launch.py  vision_bringup.launch.py
src/energy/energy_detector/: CMakeLists.txt  package.xml
src/energy/energy_detector/include/energy_detector/: detector.h  detector_node.h  general.h  inference.h
src/energy/energy_detector/src/: detector.cpp  detector_node.cpp  energy_detetor.cpp  inference.cpp
src/lc_serial/: CMakeLists.txt  package.xml
src/lc_serial/config/: serial_driver.yaml
src/lc_serial/include/lc_serial/: cJSON.h  coordsolver.h  serial_node.h
src/lc_serial/launch/: serial_driver.launch.py
src/lc_serial/src/: cJSON.c  coordsolver.cpp  malloc.cpp  serial_node.cpp
src/mindvision_camera/: README.md
src/mindvision_camera/config/: camera_info.yaml  camera_params.yaml
src/mindvision_camera/src/: mv_camera_node.cpp
src/rm_auto_aim/armor_detector/: CMakeLists.txt
src/rm_auto_aim/armor_detector/include/armor_detector/: armor.hpp  detector_node.hpp
src/rm_auto_aim/armor_detector/src/: detector.cpp  detector_node.cpp  number_classifier.cpp
src/rm_auto_aim/armor_processor/include/armor_processor/: extended_kalman_filter.hpp  processor_node.hpp  tracker.hpp
src/rm_auto_aim/armor_processor/src/: extended_kalman_filter.cpp  processor_node.cpp  tracker.cpp
src/rm_auto_aim/armor_tracker/include/armor_tracker/: tracker_node.hpp
src/rm_auto_aim/armor_tracker/src/: tracker.cpp
src/rm_auto_aim/auto_aim_bringup/config/: default.yaml
src/rm_auto_aim/trt_armor_detector/: CMakeLists.txt  FindTensorRT.cmake  package.xml
src/rm_auto_aim/trt_armor_detector/include/trt_armor_detector/: detector_node.h  pnp_solver.hpp  postprocess.h  preprocess.h  trt_detector.h  utils.hpp
src/rm_auto_aim/trt_armor_detector/model/: armor320_20230401.trt
src/rm_auto_aim/trt_armor_detector/src/: detector_node.cpp  pnp_solver.cpp  postprocess.cu  preprocess.cu  trt_detector.cpp  utils.cpp
src/rm_description/launch/: view_model.launch.py
src/rm_description/urdf/: gimbal.urdf.xacro  gimbal_b3.urdf.xacro  gimbal_yx.urdf .xacro
src/serial/: CMakeLists.txt  package.xml
src/serial/config/: serial_driver.yaml
src/serial/include/serial/: coordsolver.h  malloc.h  serial.h  serial_node.h  serial_old_node.h
src/serial/launch/: serial_driver.launch.py
src/serial/src/: cJSON.c  coordsolver.cpp  malloc.c  serial.cpp  serial_node.cpp  serial_old_node.cpp
src/video_pub/: CMakeLists.txt  package.xml
src/video_pub/src/: img_pub.cpp  video_pub.cpp  video_sub.cpp
