<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>armor_tracker</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="3190995951@qq.com">ubuntu</maintainer>
  <license>TODO: License declaration</license>

  <!-- buildtool_depend: dependencies of the build process -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>image_transport_plugins</depend>
  <depend>visualization_msgs</depend>
  <depend>message_filters</depend>
  <depend>eigen3</depend>
  <depend>ceres</depend>
  <depend>cv_bridge</depend>
  <depend>armor_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
